--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<!-- ? CSS Link -->
-		<link rel="stylesheet" href="css/styles.css" />
 		<!-- ? Font -->
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -13,6 +11,9 @@
 			href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,700;0,900;1,300;1,700;1,900&display=swap"
 			rel="stylesheet"
 		/>
+		<!-- ? CSS Link -->
+		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="css/styles.css" />
 		<!-- ? Icons Font Awesome -->
 		<script
 			src="https://kit.fontawesome.com/d345f07264.js"
@@ -51,6 +52,13 @@
 					</ul>
 				</nav>
 				<i class="fas fa-bars"></i>
+			</div>
+			<div class="title-container">
+				<h2>Nós desenvolvemos</h2>
+				<h1>Poderosas Experiências</h1>
+				<a href="#" class="btn btn-primary btn-rounded">
+					Fazer orçamento
+				</a>
 			</div>
 		</header>
 		<!-- !Serviços -->
