feat(mobile): responsive web design

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		<main class="services-container">
 			<h2>O que fazemos</h2>
 			<div class="services-card-container">
-				<!-- HTML generate with JS -->
+				<!-- HTML generated with JS -->
 			</div>
 			<a href="#" class="btn btn-primary btn-rounded"
 				>Veja todos os serviços</a
@@ -87,7 +87,9 @@
 						</p>
 					</div>
 				</div>
-				<div class="other-jobs-container"></div>
+				<div class="other-jobs-container">
+					<!-- HTML generated with JS -->
+				</div>
 			</div>
 		</section>
 		<!-- !Footer -->
@@ -102,7 +104,9 @@
 						voluptatibus ducimus illo sed? Expedita, id quisquam?
 					</p>
 				</div>
-				<div class="footer-container__links"></div>
+				<div class="footer-container__links">
+					<!-- HTML generated with JS -->
+				</div>
 				<div class="footer-container__copywriting">
 					<p>&copy; 2022 Agency</p>
 					<p>A melhor agência web para seus projetos</p>
