--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
 			src="https://kit.fontawesome.com/d345f07264.js"
 			crossorigin="anonymous"
 		></script>
+		<!-- ! Favicon -->
+		<link
+			rel="icon"
+			type="image/x-icon"
+			href="./assets/images/favicon.ico"
+		/>
 		<title>Agency</title>
 	</head>
 	<body>
